--- a/inst/doc/order.conf
+++ b/inst/doc/order.conf
@@ -7,11 +7,15 @@ poisson
 probit
 blogit
 bprobit
-gamma.mixed
-logit.mixed
-ls.mixed
-poisson.mixed
-probit.mixed
+logit.gam
+normal.gam
+poisson.gam
+probit.gam
+gamma.gee
+logit.gee
+normal.gee
+poisson.gee
+probit.gee
 ologit
 oprobit
 gamma.survey
