--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Date: 2011-03-10
 Title: Zelig Book Builder
 Author: Matt Owen
 Maintainer: Matt Owen <mowen@iq.harvard.edu>
-Depends: Zelig 
+Depends: Zelig (>= 4.0-3)
 Description: A Zelig Model
 License: GPL (>=2)
 URL: http://gking.harvard.edu/zelig
